[package]
name = "rusty-blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[dependencies]
cortex-m = "^0.7.7"      # Access to the generic ARM peripherals
cortex-m-rt = "^0.7"  # Startup code for the ARM Core
embedded-hal = "^0.2.7"  # Access to generic embedded functions (`set_high`)
panic-halt = "^0.2.0"    # Panic handler

usb-device = "^0.2.9" # for usb serial test
usbd-serial = "^0.1.0" # for usb serial test

w5500 = "^0.4.1" # for ethernet
embedded-nal = "^0.6.0" # for ethernet test
mono-clock = "0.1"
minimq = "0.7"
#minimq = { path = "../minimq-0.7.0" }

smoltcp-nal = { version = "0.3", features=["shared-stack"] } # for dhcp 

# Access to the stm32f407 HAL.
[dependencies.stm32f4xx-hal]
version = "0.16"
features = ["stm32f407", "rt", "usb_fs"]